--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,8 @@ add_executable(MyApp
 	       src/LastStageConfigOptimization.cpp
 	       src/WholeBodyEstimation.cpp
 	       src/TransientPathGeneration.cpp
-               src/TrajectoryConfigOptimization.cpp)
+               src/TrajectoryConfigOptimization.cpp
+	       src/CartesianController.cpp)
 
 
 target_link_libraries(MyApp  ${KLAMPT_LIBRARIES} ${SNOPT_LIBRARIES} ${GUROBI_LIBRARIES} ${CILANTRO_LIBRARIES} ${GLEW_LIBRARY})
