Brand New Start

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,24 +62,8 @@ set(CILANTRO_LIBRARIES cilantro.so pangolin.so)
 # Main Code Properties
 add_executable(MyApp
                src/Main.cpp
-               src/CommonHeader.h
-	       src/RobotInfo.h
-               src/ContactInfoLoader.cpp
-               src/EnviGeometry.cpp
-	       src/RobotStateFiler.cpp
-	       src/RobotUtils.cpp
-	       src/ConvexPolytope.cpp
-	       src/SimulationTest.cpp
-	       src/SimulationRelated.cpp
-	       src/ControlReferenceGeneration.cpp
-	       src/TrajectoryPlanning.cpp
-	       src/LastStageConfigOptimization.cpp
-	       src/WholeBodyEstimation.cpp
-	       src/TransientPathGeneration.cpp 
-               src/TrajectoryConfigOptimization.cpp
-	       src/CartesianController.cpp
-	       src/EndEffectorOrientation.cpp
-	       src/IKQuaternion.cpp)
+	       src/Loader.cpp
+	       src/RobotInfo.h)
 
 
 target_link_libraries(MyApp  ${KLAMPT_LIBRARIES} ${SNOPT_LIBRARIES} ${GUROBI_LIBRARIES} ${CILANTRO_LIBRARIES} ${GLEW_LIBRARY})
